Allow disabling selector on PVCs
Some dynamic storage provisioners (e.g Longhorn) will refuse to work if
selectors are defined on the PVC

--- a/templates/pvc.yml
+++ b/templates/pvc.yml
@@ -15,8 +15,10 @@ spec:
       storage: {{ .archiveDir.size }}
   storageClassName: {{ .archiveDir.storageClassName }}
   volumeMode: Filesystem
+  {{- if .archiveDir.useSelector }}
   selector:
     matchLabels:
       {{- include "postgresql-cluster.selectorLabels" $ | nindent 6 }}  
       {{- if .archiveDir.extraMatchLabels }}{{ toYaml .archiveDir.extraMatchLabels | nindent 6 }}{{- end }}
+  {{- end }}{{/* if .archiveDir.useSelector */}}
 {{- end }}{{/* with .Values.postgres.volumeClaims */}}
