--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -174,6 +174,8 @@ spec:
         readinessProbe:
           exec:
             command:
+            - su-exec
+            - postgres
             - /opt/check-status-of-primary-node.sh
           initialDelaySeconds: {{ .Values.pgpool.readinessProbe.initialDelaySeconds | default 3 }}
           periodSeconds: {{  .Values.pgpool.readinessProbe.periodSeconds | default 30 }}
