Add setting for issuer kind (ClusterIssuer or Issuer) in values.yaml

--- a/templates/certificate.yaml
+++ b/templates/certificate.yaml
@@ -23,5 +23,5 @@ spec:
   - server auth
   issuerRef:
     name: {{ .Values.tls.issuerName }}
-    kind: Issuer
+    kind: {{ .Values.tls.issuerKind | default("Issuer") }}
 {{- end }}{{/* if .Values.tls.issuerName */}}
